--- a/assests/styles/style.css
+++ b/assests/styles/style.css
@@ -255,7 +255,27 @@ nav{
   animation: gradient 4s ease infinite;
   background-size: 400% 400%;
 }
-
+.modal-button button{
+  border: none;
+  padding: 0px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: #ffffff;
+  padding: 8px 12px;
+  background: #f09440; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #f09440,
+    #00d2ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f09440,
+    #00d2ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  animation: gradient 4s ease infinite;
+  background-size: 400% 400%;
+}
 .contact-form {
   background: #1f2833;
 }
