--- a/assests/styles/style.css
+++ b/assests/styles/style.css
@@ -62,6 +62,10 @@ body {
 .bg-first {
   background-color: #1f2833;
 }
+.modal-content img {
+    width: 100%;
+    height: 60vh;
+}
 .contact-btn a {
   border-radius: 5px;
   border: 1px solid #ffffff;
